examples/type_system/failing/56_strict_any_nested_rejected.flx
public fn first(xs: List<Any>) -> Any {
    1
}

fn main() -> Unit {
}
